base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-fatih-aydin-service
  namespace: dev
spec:
  selector:
    app: app-fatih-aydin
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
