base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-fatih-aydin-ingress
  namespace: dev
spec:
  rules:
  - host: app.fatihayd.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-fatih-aydin-service
            port:
              number: 80
